primer entrega, incompleto

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,7 +3,7 @@
     <head>
     </head>
     <body>
-        <p><h1>Bueeeeenas</h2></p>
+        <p><h2>Bienvenido a Chq.to</h2></p><br>
         <% if user_signed_in? %>
         <%= button_to "Sign Out", destroy_user_session_path, method: :delete%>
         <%= link_to "Create Link", "/links/new" %>
