--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -3,12 +3,29 @@
     <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block" id="notice"><%= notice %></p>
   <% end %>
 
-  <div class="flex justify-between items-center">
-    <h1 class="font-bold text-4xl">Links</h1>
+  <div class="flex justify-between items-center mb-6">
+    <h1 class="font-bold text-4xl"> Your Links</h1>
     <%= link_to "New link", new_link_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
   </div>
 
-  <div id="links" class="min-w-full">
-    <%= render @links %>
-  </div>
+  <% @links.each do |link| %>
+    <div class="bg-white rounded-md overflow-hidden shadow-md mb-6 p-6">
+      <p class="text-gray-700 font-semibold mb-2">Original URL:</p>
+      <p class="mb-6"><%= link.url %></p>
+
+      <p class="text-gray-700 font-semibold mb-2">Short URL:</p>
+      <p class="mb-6"><%= link.slug %></p>
+
+      <p class="text-gray-700 font-semibold mb-2">Type:</p>
+      <p class="mb-6"><%= link.type %></p>
+
+      <% if link.name.present? %>
+        <p class="text-gray-700 font-semibold mb-2">Name:</p>
+        <p class="mb-6"><%= link.name %></p>
+      <% end %>
+
+      <%= link_to "Details", link_path(link), class: "rounded-lg py-2 px-4 bg-gray-100 text-gray-800 font-medium hover:bg-gray-200" %>
+    </div>
+    <div class="border-b border-gray-200 mb-6">______</div>
+  <% end %>
 </div>
