--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -1,15 +1,65 @@
-<div class="mx-auto md:w-2/3 w-full flex">
-  <div class="mx-auto">
+<div class="mx-auto md:w-2/3 w-full">
+  <% if @error_message %>
+    <p class="text-red-500 font-semibold mb-5"><%= @error_message %></p>
+  <% end %>
+
+  <div class="max-w-md mx-auto bg-white rounded-md overflow-hidden shadow-md">
     <% if notice.present? %>
-      <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block" id="notice"><%= notice %></p>
+      <p class="py-2 px-4 bg-green-50 text-green-500 font-medium rounded-t-md"><%= notice %></p>
     <% end %>
 
-    <%= render @link %>
+    <h1 class="font-bold text-4xl border-b-2 border-gray-200 p-4">Link Information</h1>
 
-    <%= link_to "Edit this link", edit_link_path(@link), class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-    <div class="inline-block ml-2">
-      <%= button_to "Destroy this link", link_path(@link), method: :delete, class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 font-medium" %>
+    <div class="p-6 space-y-4">
+      <div class="flex justify-between items-center">
+        <p class="text-gray-700 font-semibold">Original URL:</p>
+        <p><%= @link.url %></p>
+      </div>
+
+      <hr class="border-gray-200 my-2">
+
+      <div class="flex justify-between items-center">
+        <p class="text-gray-700 font-semibold">Short URL:</p>
+        <p><%= @link.slug %></p>
+      </div>
+
+      <hr class="border-gray-200 my-2">
+
+      <div class="flex justify-between items-center">
+        <p class="text-gray-700 font-semibold">Type:</p>
+        <p><%= @link.type %></p>
+      </div>
+
+      <!-- Agregar líneas similares para otros campos con hr en medio -->
+
+      <% if @link.name.present? %>
+        <hr class="border-gray-200 my-2">
+        <div class="flex justify-between items-center">
+          <p class="text-gray-700 font-semibold">Name:</p>
+          <p><%= @link.name %></p>
+        </div>
+      <% end %>
+
+      <% if @link.expiration_date.present? %>
+        <hr class="border-gray-200 my-2">
+        <div class="flex justify-between items-center">
+          <p class="text-gray-700 font-semibold">Expiration date:</p>
+          <p><%= @link.expiration_date %></p>
+        </div>
+      <% end %>
+
     </div>
-    <%= link_to "Back to links", links_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+
+    <div class="flex justify-end p-6 space-x-2">
+      <%= link_to "Redirect", redirect_to_original_url(@link.slug), class: "rounded-lg py-3 px-5 bg-blue-600 text-white font-medium" %>
+      <%= link_to "Edit", edit_link_path(@link), class: "rounded-lg py-3 px-5 bg-gray-100 text-gray-800 font-medium" %>
+      <%= link_to "Destroy", link_path(@link), method: :delete, data: { confirm: "Are you sure?" }, class: "rounded-lg py-3 px-5 bg-red-700 text-gray-800 font-medium" %>
+    </div>
+
+    <div class="flex justify-end p-6">
+      <%= link_to "Back to links", links_path, class: "rounded-lg py-3 px-5 bg-gray-100 text-gray-800 font-medium" %>
+    </div>
   </div>
 </div>
+
+
