private link finalizado

--- a/app/views/links/form_password.html.erb
+++ b/app/views/links/form_password.html.erb
@@ -5,7 +5,7 @@
 
   <h1 class="text-2xl font-bold mb-4">Enter Password</h1>
 
-  <%= form_with(url: check_password_link(@link.slug), method: :post, local: true, class: "space-y-4") do |form| %>
+  <%= form_with(url: check_password_link_path(@link.slug), method: :post, local: true, class: "space-y-4") do |form| %>
     <div class="mb-4">
       <%= form.label :password, class: "block text-sm font-medium text-gray-600" %>
       <%= form.password_field :password, class: "mt-1 p-2 block w-full border rounded-md shadow-sm focus:outline-none focus:border-blue-500 focus:ring focus:ring-blue-200" %>
@@ -13,6 +13,7 @@
 
     <%= form.submit "Submit", class: "w-full py-2 px-4 border border-transparent rounded-md shadow-sm text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring focus:ring-blue-200" %>
   <% end %>
+
 
   <div class="mt-4">
     <%= link_to "Back to Home", root_path, class: "text-sm text-gray-600 hover:text-blue-500" %>
