--- a/app/views/links/_form.html.erb
+++ b/app/views/links/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@link, url: links_path, html: { class: "mt-4" }) do |form| %>
+<%= form_for(@link, html: { class: "mt-4" }, local: true) do |form| %>
   <% if link.errors.any? %>
     <div id="error_explanation" class="bg-red-50 text-red-500 px-3 py-2 font-medium rounded-lg mt-3">
       <h2><%= pluralize(link.errors.count, "error") %> prohibited this link from being saved:</h2>
