profile, edit and destroy account

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -17,7 +17,7 @@
                 <li class="md:px-4 md:py-2 text-indigo-500"><a href="/">Home</a></li>
                 <% if user_signed_in? %>
                 <li class="md:px-4 md:py-2 hover:text-indigo-400"><a href="/links">My Links</a></li>
-				<li class="md:px-4 md:py-2 hover:text-indigo-400"><a href="#">My Account</a></li>
+				<li class="md:px-4 md:py-2 hover:text-indigo-400"><a href="/user">My Account</a></li>
 				<li class="md:px-4 md:py-2 hover:text-indigo-400"><a href="#">Statistics</a></li>
                 <% end %>
 				<li class="md:px-4 md:py-2 hover:text-indigo-400"><a href="#">Information</a></li>
