--- a/app/views/links/new.html.erb
+++ b/app/views/links/new.html.erb
@@ -3,6 +3,18 @@
 
   <h1 class="font-bold text-4xl">New link</h1>
 
+  <% if @link.errors.any? %>
+    <div id="error_explanation" class="bg-red-50 text-red-500 px-3 py-2 font-medium rounded-lg mt-3">
+      <h2><%= pluralize(@link.errors.count, "error") %> prohibited this link from being saved:</h2>
+
+      <ul>
+        <% @link.errors.each do |error| %>
+          <li><%= error.full_message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+
   <%= render "form", link: @link %>
 
   <%= link_to "Back to links", links_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
