--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -3,13 +3,10 @@
 	<div class="md:h-16 h-28 mx-auto md:px-4 container flex items-center justify-between flex-wrap md:flex-nowrap">
 		<!-- Logo -->
 		<div class="text-indigo-500 md:order-1">
-			<!-- Heroicon - Chip Outline -->
-			<svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10" fill="none" viewBox="0 0 24 24"
-				stroke="currentColor">
-				<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-					d="M9 3v2m6-2v2M9 19v2m6-2v2M5 9H3m2 6H3m18-6h-2m2 6h-2M7 19h10a2 2 0 002-2V7a2 2 0 00-2-2H7a2 2 0 00-2 2v10a2 2 0 002 2zM9 9h6v6H9V9z" />
-			</svg>
+			<!-- Cambiando el SVG por una etiqueta img -->
+			<%= image_tag('chq200.png', class: 'h-11') %>
 		</div>
+
 		<div class="text-gray-500 order-3 w-full md:w-auto md:order-2">
 			<ul class="flex font-semibold justify-between">
                 <!-- Active Link = text-indigo-500
@@ -18,22 +15,21 @@
                 <% if user_signed_in? %>
                 <li class="md:px-4 md:py-2 hover:text-indigo-400"><a href="/links">My Links</a></li>
 				<li class="md:px-4 md:py-2 hover:text-indigo-400"><a href="/user">My Account</a></li>
-				<li class="md:px-4 md:py-2 hover:text-indigo-400"><a href="#">Statistics</a></li>
                 <% end %>
 				<li class="md:px-4 md:py-2 hover:text-indigo-400"><a href="#">Information</a></li>
 			</ul>
 		</div>
 		<div class="order-2 md:order-3">
+			<% if user_signed_in? %>
+				<%= button_to "Sign Out", destroy_user_session_path, method: :delete, 'data-turbolinks': 'false', class: "px-4 py-2 bg-indigo-500 hover:bg-indigo-600 text-gray-50 rounded-xl flex items-center gap-2"  %>
+			<% else %>
 			<button class="px-4 py-2 bg-indigo-500 hover:bg-indigo-600 text-gray-50 rounded-xl flex items-center gap-2">
                 <!-- Heroicons - Login Solid -->
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
                 <path fill-rule="evenodd" d="M3 3a1 1 0 011 1v12a1 1 0 11-2 0V4a1 1 0 011-1zm7.707 3.293a1 1 0 010 1.414L9.414 9H17a1 1 0 110 2H9.414l1.293 1.293a1 1 0 01-1.414 1.414l-3-3a1 1 0 010-1.414l3-3a1 1 0 011.414 0z" clip-rule="evenodd" />
                 </svg>
-                <% if user_signed_in? %>
-                    <%= button_to "Sign Out", destroy_user_session_path, method: :delete, 'data-turbolinks': 'false'  %>
-                <% else %>
-                    <%= link_to "Sign In", new_user_session_path, 'data-turbolinks': 'false' %>
-                <% end %>
+                <%= link_to "Sign In", new_user_session_path, 'data-turbolinks': 'false' %>
+            <% end %>
             </button>
 		</div>
 	</div>
