--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -54,6 +54,8 @@
       <%= link_to "Redirect", redirect_to_original_url(@link.slug), class: "rounded-lg py-3 px-5 bg-blue-600 text-white font-medium" %>
       <%= link_to "Edit", edit_link_path(@link), class: "rounded-lg py-3 px-5 bg-gray-100 text-gray-800 font-medium" %>
       <%= button_to "Destroy", link_path(@link), method: :delete, class: "rounded-lg py-3 px-5 bg-red-700 text-gray-800 font-medium", id: "destroy-link" %>
+      <%= link_to "Accesses by Day", daily_accesses_link_path(@link), class: "mt-4 rounded-lg py-3 px-5 bg-blue-600 text-white inline-block font-medium" %>
+      <%= link_to "Access Details", list_accesses_link_path(@link), class: "mt-4 rounded-lg py-3 px-5 bg-blue-600 text-white inline-block font-medium" %>
     </div>
 
     <div class="flex justify-end p-6">
