--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,47 +1,43 @@
 <div class="max-w-md mx-auto bg-white p-8 border rounded-md shadow-md">
-
-  <%= render "devise/shared/error_messages", resource: resource %><br />
+  <%= render "devise/shared/error_messages", resource: resource %>
 
   <h2 class="text-2xl font-semibold mb-4">Edit <%= resource_name.to_s.humanize %></h2>
 
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-    
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, class: "space-y-4" }) do |f| %>
+    <div class="space-y-2">
+      <%= f.label :username, class: "block text-sm font-semibold text-gray-700" %>
+      <%= f.text_field :username, autofocus: true, autocomplete: "username", class: "block w-full px-3 py-2 mt-1 rounded-md border border-gray-300 focus:outline-none focus:border-blue-500 focus:ring focus:ring-blue-200 focus:ring-opacity-50" %>
+    </div>
 
-    <div class="mb-4">
-      <%= f.label :username, class: "block text-gray-700 text-sm font-bold mb-2" %>
-      <%= f.text_field :username, autofocus: true, autocomplete: "username", class: "block w-full px-3 py-2 mt-2 rounded-md border border-gray-300 shadow-sm focus:outline-none focus:border-blue-500 focus:ring focus:ring-blue-200 focus:ring-opacity-50" %>
-    </div><br />
-
-    <div class="mb-4">
-      <%= f.label :email, class: "block text-gray-700 text-sm font-bold mb-2" %>
-      <%= f.email_field :email, autocomplete: "email", class: "block w-full px-3 py-2 mt-2 rounded-md border border-gray-300 shadow-sm focus:outline-none focus:border-blue-500 focus:ring focus:ring-blue-200 focus:ring-opacity-50" %>
-    </div><br />
+    <div class="space-y-2">
+      <%= f.label :email, class: "block text-sm font-semibold text-gray-700" %>
+      <%= f.email_field :email, autocomplete: "email", class: "block w-full px-3 py-2 mt-1 rounded-md border border-gray-300 focus:outline-none focus:border-blue-500 focus:ring focus:ring-blue-200 focus:ring-opacity-50" %>
+    </div>
 
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
       <div class="mb-4">Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
     <% end %>
 
-    <div class="mb-4">
-      <%= f.label :password, class: "block text-gray-700 text-sm font-bold mb-2" %> <i>(leave blank if you don't want to change it)</i>
-      <%= f.password_field :password, autocomplete: "new-password", class: "block w-full px-3 py-2 mt-2 rounded-md border border-gray-300 shadow-sm focus:outline-none focus:border-blue-500 focus:ring focus:ring-blue-200 focus:ring-opacity-50" %>
+    <div class="space-y-2">
+      <%= f.label :password, class: "block text-sm font-semibold text-gray-700" %> <i>(leave blank if you don't want to change it)</i>
+      <%= f.password_field :password, autocomplete: "new-password", class: "block w-full px-3 py-2 mt-1 rounded-md border border-gray-300 focus:outline-none focus:border-blue-500 focus:ring focus:ring-blue-200 focus:ring-opacity-50" %>
       <% if @minimum_password_length %>
-        <br />
-        <em><%= @minimum_password_length %> characters minimum</em>
+        <div class="text-sm"><em><%= @minimum_password_length %> characters minimum</em></div>
       <% end %>
-    </div><br />
+    </div>
 
-    <div class="mb-4">
-      <%= f.label :password_confirmation, class: "block text-gray-700 text-sm font-bold mb-2" %>
-      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "block w-full px-3 py-2 mt-2 rounded-md border border-gray-300 shadow-sm focus:outline-none focus:border-blue-500 focus:ring focus:ring-blue-200 focus:ring-opacity-50" %>
-    </div><br />
+    <div class="space-y-2">
+      <%= f.label :password_confirmation, class: "block text-sm font-semibold text-gray-700" %>
+      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "block w-full px-3 py-2 mt-1 rounded-md border border-gray-300 focus:outline-none focus:border-blue-500 focus:ring focus:ring-blue-200 focus:ring-opacity-50" %>
+    </div>
 
-    <div class="mb-4">
-      <%= f.label :current_password, class: "block text-gray-700 text-sm font-bold mb-2" %> <i>(we need your current password to confirm your changes)</i>
-      <%= f.password_field :current_password, autocomplete: "current-password", class: "block w-full px-3 py-2 mt-2 rounded-md border border-gray-300 shadow-sm focus:outline-none focus:border-blue-500 focus:ring focus:ring-blue-200 focus:ring-opacity-50" %>
-    </div><br />
-
+    <div class="space-y-2">
+      <%= f.label :current_password, class: "block text-sm font-semibold text-gray-700" %> <i>(we need your current password to confirm your changes)</i>
+      <%= f.password_field :current_password, autocomplete: "current-password", class: "block w-full px-3 py-2 mt-1 rounded-md border border-gray-300 focus:outline-none focus:border-blue-500 focus:ring focus:ring-blue-200 focus:ring-opacity-50" %>
+    </div>
+    <br/>
     <div class="mt-4">
-      <%= f.submit "Update", class: "bg-green-500 text-gray py-2 px-4 rounded-md hover:bg-blue-600 focus:outline-none focus:shadow-outline-blue active:bg-blue-800" %>
+      <%= f.submit "Update", class: "w-full px-4 py-2 bg-green-500 text-gray rounded-md hover:bg-blue-600 focus:outline-none focus:shadow-outline-blue active:bg-blue-800" %>
     </div>
   <% end %>
 
