--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,34 +1,32 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<div class="max-w-md mx-auto bg-white p-8 border rounded-md shadow-md">
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+  <h2 class="text-2xl font-semibold mb-4">Sign Up</h2>
 
-  <div class="field">
-    <%= f.label :username %><br />
-    <%= f.text_field :username, autofocus: true, autocomplete: "username" %>
-  </div>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: "space-y-4" }) do |f| %>
+    <div class="space-y-2">
+      <%= f.label :email, class: "block text-sm font-semibold text-gray-700" %>
+      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "block w-full px-3 py-2 mt-1 rounded-md border border-gray-300 focus:outline-none focus:border-blue-500 focus:ring focus:ring-blue-200 focus:ring-opacity-50" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+    <div class="space-y-2">
+      <%= f.label :username, class: "block text-sm font-semibold text-gray-700" %>
+      <%= f.text_field :username, autofocus: true, autocomplete: "username", class: "block w-full px-3 py-2 mt-1 rounded-md border border-gray-300 focus:outline-none focus:border-blue-500 focus:ring focus:ring-blue-200 focus:ring-opacity-50" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+    <div class="space-y-2">
+      <%= f.label :password, class: "block text-sm font-semibold text-gray-700" %>
+      <%= f.password_field :password, autocomplete: "new-password", class: "block w-full px-3 py-2 mt-1 rounded-md border border-gray-300 focus:outline-none focus:border-blue-500 focus:ring focus:ring-blue-200 focus:ring-opacity-50" %>
+    </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
+    <div class="space-y-2">
+      <%= f.label :password_confirmation, class: "block text-sm font-semibold text-gray-700" %>
+      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "block w-full px-3 py-2 mt-1 rounded-md border border-gray-300 focus:outline-none focus:border-blue-500 focus:ring focus:ring-blue-200 focus:ring-opacity-50" %>
+    </div>
+    <br/>
+    <div class="mt-4">
+      <%= f.submit "Sign Up", class: "w-full px-4 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-600 focus:outline-none focus:shadow-outline-blue active:bg-blue-600" %>
+    </div>
+  <% end %>
 
-<%= render "devise/shared/links" %>
+</div>
