--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,19 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-    </head>
-    <body>
 
-        
-        <p><h2 class="text-3xl font-bold underline">Bienvenido a Chq.to</h2></p>
-        <% if user_signed_in? %>
-        <%= button_to "Sign Out", destroy_user_session_path, method: :delete%>
-        <%= link_to "Create Link", "/links/new" %>
-        <%= link_to "My Links", "/links" %>
-        <p class="text-lg text-black-500">Hello <%= current_user.id %>!</p>
-        <% else %>
-            <%= link_to "Sign In", new_user_session_path %>
-            <%= link_to "Sign Up", new_user_registration_path %>
-        <% end %>
-    </body>
-</html>
+<div class="flex flex-col items-center justify-center mx-auto">
+  <svg xmlns="http://www.w3.org/2000/svg" class="h-16 w-16 text-indigo-500 mb-4" viewBox="0 0 20 20" fill="currentColor">
+    <path fill-rule="evenodd" d="M10 3a1 1 0 00-1 1v6a1 1 0 002 0V4a1 1 0 00-1-1zM9 17a1 1 0 112 0 1 1 0 01-2 0zM14 14a1 1 0 100-2 1 1 0 000 2zM4 14a1 1 0 100-2 1 1 0 000 2zM16 7h3v2h-3a1 1 0 000 2h3v2h-3a1 1 0 000 2h3v1a1 1 0 11-2 0V9.414l-9.707 9.707a1 1 0 01-1.414 0L1.293 9.293A1 1 0 012.707 7.88L10 15.172l7.293-7.293a1 1 0 011.414 1.414L11 17.414V20h2a1 1 0 010 2H7a1 1 0 010-2h2v-2.586l8-8L16 7z" clip-rule="evenodd" />
+  </svg>
+
+  <h1 class="text-4xl font-bold mb-2 text-indigo-700">Welcome to Chq.to!</h1>
+  <p class="text-gray-600 text-lg text-center">Generate short URLs effortlessly with Chq.to.</p>
+
+  <p class="text-lg text-center text-gray-700 mb-2">You can create the following types of links:</p>
+  <ul class="text-lg text-center text-gray-500 mb-6">
+    <li>Regular Links</li>
+    <li>Private Links</li>
+    <li>One-Time Links</li>
+    <li>Temporal Links</li>
+    <!-- Agrega más tipos según sea necesario -->
+  </ul>
+  <br/>
+  <% if user_signed_in? %>
+    <h1 class="text-4xl font-bold mb-2">Hello, <%= current_user.username %>!</h1>
+    <%= link_to "Create Short Link", new_link_path, class: "mt-6 bg-indigo-500 hover:bg-indigo-600 text-white font-medium py-2 px-4 rounded-md" %>
+  <% else %>
+    <p class="text-lg text-center">Please sign in to create a link.</p>
+  <% end %>
+</div>
+
