--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,36 +1,51 @@
-<!-- component -->
 <nav class="bg-gray-200 shadow shadow-gray-300 w-100 px-8 md:px-auto">
-	<div class="md:h-16 h-28 mx-auto md:px-4 container flex items-center justify-between flex-wrap md:flex-nowrap">
-		<!-- Logo -->
-		<div class="text-indigo-500 md:order-1">
-			<!-- Cambiando el SVG por una etiqueta img -->
-			<%= image_tag('chq200.png', class: 'h-11') %>
-		</div>
+  <div class="md:h-16 h-28 mx-auto md:px-4 container flex items-center justify-between flex-wrap md:flex-nowrap">
+    
+    <!-- Logo a la izquierda -->
+    <div class="text-indigo-500 md:order-1 order-2">
+      <!-- Cambiando el SVG por una etiqueta img -->
+      <%= image_tag('chq200.png', class: 'h-11') %>
+    </div>
 
-		<div class="text-gray-500 order-3 w-full md:w-auto md:order-2">
-			<ul class="flex font-semibold justify-between">
-                <!-- Active Link = text-indigo-500
-                Inactive Link = hover:text-indigo-500 -->
-                <li class="md:px-4 md:py-2 text-indigo-500"><a href="/">Home</a></li>
-                <% if user_signed_in? %>
-                <li class="md:px-4 md:py-2 hover:text-indigo-400"><a href="/links">My Links</a></li>
-				<li class="md:px-4 md:py-2 hover:text-indigo-400"><a href="/user">My Account</a></li>
-                <% end %>
-				<li class="md:px-4 md:py-2 hover:text-indigo-400"><a href="#">Information</a></li>
-			</ul>
-		</div>
-		<div class="order-2 md:order-3">
-			<% if user_signed_in? %>
-				<%= button_to "Sign Out", destroy_user_session_path, method: :delete, 'data-turbolinks': 'false', class: "px-4 py-2 bg-indigo-500 hover:bg-indigo-600 text-gray-50 rounded-xl flex items-center gap-2"  %>
-			<% else %>
-			<button class="px-4 py-2 bg-indigo-500 hover:bg-indigo-600 text-gray-50 rounded-xl flex items-center gap-2">
-                <!-- Heroicons - Login Solid -->
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
-                <path fill-rule="evenodd" d="M3 3a1 1 0 011 1v12a1 1 0 11-2 0V4a1 1 0 011-1zm7.707 3.293a1 1 0 010 1.414L9.414 9H17a1 1 0 110 2H9.414l1.293 1.293a1 1 0 01-1.414 1.414l-3-3a1 1 0 010-1.414l3-3a1 1 0 011.414 0z" clip-rule="evenodd" />
-                </svg>
-                <%= link_to "Sign In", new_user_session_path, 'data-turbolinks': 'false' %>
-            <% end %>
-            </button>
-		</div>
-	</div>
+    <!-- Enlaces en el medio -->
+    <div class="text-gray-500 md:order-2 order-1">
+      <ul class="flex font-semibold justify-between">
+        <!-- Active Link = text-indigo-500
+        Inactive Link = hover:text-indigo-500 -->
+        <li class="md:px-4 md:py-2 text-indigo-500"><a href="/">Home</a></li>
+        <% if user_signed_in? %>
+          <li class="md:px-4 md:py-2 hover:text-indigo-400"><a href="/links">My Links</a></li>
+          <li class="md:px-4 md:py-2 hover:text-indigo-400"><a href="/user">My Account</a></li>
+        <% end %>
+        <li class="md:px-4 md:py-2 hover:text-indigo-400"><a href="#">Information</a></li>
+      </ul>
+    </div>
+
+    <!-- Botones a la derecha -->
+    <div class="order-3 md:order-3">
+      <% if user_signed_in? %>
+        <%= button_to "Sign Out", destroy_user_session_path, method: :delete, 'data-turbolinks': 'false', class: "px-4 py-2 bg-indigo-500 hover:bg-indigo-600 text-gray-50 rounded-xl flex items-center gap-2"  %>
+      <% else %>
+        <div class="flex items-center gap-4">
+          <!-- Botón Sign In -->
+          <button class="px-4 py-2 bg-indigo-500 hover:bg-indigo-600 text-gray-50 rounded-xl flex items-center gap-2">
+            <!-- Heroicons - Login Solid -->
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+              <path fill-rule="evenodd" d="M3 3a1 1 0 011 1v12a1 1 0 11-2 0V4a1 1 0 011-1zm7.707 3.293a1 1 0 010 1.414L9.414 9H17a1 1 0 110 2H9.414l1.293 1.293a1 1 0 01-1.414 1.414l-3-3a1 1 0 010-1.414l3-3a1 1 0 011.414 0z" clip-rule="evenodd" />
+            </svg>
+            <%= link_to "Sign In", new_user_session_path, 'data-turbolinks': 'false' %>
+          </button>
+
+          <!-- Botón Sign Up -->
+          <button class="px-4 py-2 bg-indigo-500 hover:bg-indigo-600 text-gray-50 rounded-xl flex items-center gap-2">
+            <!-- Heroicons - User Add Solid -->
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+              <path d="M10 12a2 2 0 100-4 2 2 0 000 4zM3 5a3 3 0 016 0 6 6 0 013 5.196A7.002 7.002 0 0110 18a7.002 7.002 0 01-6.125-3.604A6 6 0 013 5zm9 0a1 1 0 11-2 0 1 1 0 012 0zM5 5a1 1 0 112 0 1 1 0 01-2 0z"/>
+            </svg>
+            <%= link_to "Sign Up", new_user_registration_path, 'data-turbolinks': 'false' %>
+          </button>
+        </div>
+      <% end %>
+    </div>
+  </div>
 </nav>
