--- a/app/views/links/daily_accesses.html.erb
+++ b/app/views/links/daily_accesses.html.erb
@@ -1,23 +1,27 @@
 <div class="mx-auto md:w-2/3 w-full">
-  <h1 class="font-bold text-4xl">Link Details</h1>
+  <h1 class="font-bold text-4xl mb-6">Accesses by Day</h1>
 
-  <!-- Aquí muestras la información del link, por ejemplo, nombre y URL -->
-
-  <h2 class="font-bold text-2xl mt-8 mb-4">Accesses by Day</h2>
+  <br/>
 
   <% if @accesses_by_day.present? %>
-    <ul>
+    <ul class="mb-4">
       <% @accesses_by_day.each do |date, accesses| %>
         <li class="mb-4">
           <span class="font-bold">Date:</span> <%= date %><br>
           <span class="font-bold">Accesses:</span> <%= accesses.count %>
         </li>
+        <hr class="border-gray-200 my-2">
       <% end %>
     </ul>
+
+    <div class="mt-4">
+      <!-- Mostrar paginación -->
+      <%= paginate @accesses_by_day %>
+    </div>
   <% else %>
-    <p>No accesses recorded yet.</p>
+    <p class="mt-4 text-gray-700">No accesses recorded yet.</p>
   <% end %>
-
-  <%= link_to "Back to Link", link_path(@link), class: "mt-8 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-
+  <br/>
+  <%= link_to "Back to Link", link_path(@link), class: "mt-8 rounded-lg py-3 px-5 bg-gray-100 text-gray-800 font-medium inline-block" %>
 </div>
+
