--- a/app/views/links/edit.html.erb
+++ b/app/views/links/edit.html.erb
@@ -1,32 +1,32 @@
 <div class="mx-auto md:w-2/3 w-full">
-  <h1 class="font-bold text-4xl">Editing link</h1>
+  <h1 class="font-bold text-4xl mb-6">Editing link</h1>
 
   <%= form_for(@link, as: :link, url: link_path(@link), method: :patch) do |form| %>
 
     <div class="my-5">
-      <%= form.label :name %>
-      <%= form.text_field :name, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
+      <%= form.label :name, class: "block text-gray-700 text-sm font-bold mb-2" %>
+      <%= form.text_field :name, class: "block w-full px-3 py-2 mt-2 rounded-md border border-gray-300 shadow-sm focus:outline-none focus:border-blue-500 focus:ring focus:ring-blue-200 focus:ring-opacity-50" %>
     </div>
 
     <div class="my-5">
-      <%= form.label :url %>
-      <%= form.text_field :url, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full text-gray-500", readonly: true %>
+      <%= form.label :url, class: "block text-gray-700 text-sm font-bold mb-2" %>
+      <%= form.text_field :url, class: "block w-full px-3 py-2 mt-2 rounded-md border border-gray-300 bg-gray-100 cursor-not-allowed", readonly: true %>
     </div>
 
     <div class="my-5">
-      <%= form.label :type %>
+      <%= form.label :type, class: "block text-gray-700 text-sm font-bold mb-2" %>
       <%= form.select :type, [['Regular', 'RegularLink'], ['Temporal', 'TemporalLink'], ['One Time', 'OneTimeLink'], ['Private', 'PrivateLink']],
-                     { prompt: 'Select Link Type' }, { class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full", id: "link_type" } %>
+                     { prompt: 'Select Link Type' }, { class: "block w-full px-3 py-2 mt-2 rounded-md border border-gray-300 shadow-sm focus:outline-none focus:border-blue-500 focus:ring focus:ring-blue-200 focus:ring-opacity-50", id: "link_type" } %>
     </div>
 
     <div class="my-5" id="expiration_date_field" style="display:none">
-      <%= form.label :expiration_date %>
-      <%= form.date_field :expiration_date, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
+      <%= form.label :expiration_date, class: "block text-gray-700 text-sm font-bold mb-2" %>
+      <%= form.date_field :expiration_date, class: "block w-full px-3 py-2 mt-2 rounded-md border border-gray-300 shadow-sm focus:outline-none focus:border-blue-500 focus:ring focus:ring-blue-200 focus:ring-opacity-50" %>
     </div>
 
     <div class="my-5" id="password_field" style="display:none">
-      <%= form.label :password %>
-      <%= form.password_field :password, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
+      <%= form.label :password, class: "block text-gray-700 text-sm font-bold mb-2" %>
+      <%= form.password_field :password, class: "block w-full px-3 py-2 mt-2 rounded-md border border-gray-300 shadow-sm focus:outline-none focus:border-blue-500 focus:ring focus:ring-blue-200 focus:ring-opacity-50" %>
     </div>
 
     <%= form.hidden_field :user_id, value: current_user.id %>
@@ -36,8 +36,9 @@
     </div>
   <% end %>
 
-  <%= link_to "Back to links", links_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+  <%= link_to "Back to links", links_path, class: "mt-4 rounded-lg py-3 px-5 bg-gray-100 text-gray-800 font-medium inline-block" %>
 </div>
+
 
 <script>
   document.addEventListener('DOMContentLoaded', function () {
