--- a/app/views/links/new.html.erb
+++ b/app/views/links/new.html.erb
@@ -16,6 +16,6 @@
   <% end %>
 
   <%= render "form", link: @link %>
-
-  <%= link_to "Back to links", links_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+  <br/>
+  <%= link_to "Back to links", links_path, class: "flex justify-end p-6 space-x-2 rounded-lg py-3 px-5 bg-gray-100 font-medium" %>
 </div>
