--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -1,9 +1,10 @@
-<div class="mx-auto md:w-2/3 w-full">
+<div class="mx-auto max-w-screen-md">
   <% if flash[:error].present? %>
     <p class="py-2 px-4 bg-red-50 text-red-500 font-medium rounded-md mb-4"><%= flash[:error] %></p>
   <% end %>
 
-  <div class="max-w-md mx-auto bg-white rounded-md overflow-hidden shadow-md">
+  <div class="bg-white rounded-md overflow-hidden shadow-md">
+
     <% if notice.present? %>
       <p class="py-2 px-4 bg-green-50 text-green-500 font-medium rounded-t-md"><%= notice %></p>
     <% end %>
@@ -11,25 +12,23 @@
     <h1 class="font-bold text-4xl border-b-2 border-gray-200 p-4">Link Information</h1>
 
     <div class="p-6 space-y-4">
+
       <div class="flex justify-between items-center">
         <p class="text-gray-700 font-semibold">Original URL:</p>
         <p><%= @link.url %></p>
       </div>
-
       <hr class="border-gray-200 my-2">
 
       <div class="flex justify-between items-center">
         <p class="text-gray-700 font-semibold">Short URL:</p>
         <p><%= @link.slug %></p>
       </div>
-
-      <hr class="border-gray-200 my-2">
+      
 
       <div class="flex justify-between items-center">
         <p class="text-gray-700 font-semibold">Type:</p>
         <p><%= @link.type %></p>
       </div>
-
       <!-- Agregar líneas similares para otros campos con hr en medio -->
 
       <% if @link.name.present? %>
@@ -49,18 +48,19 @@
       <% end %>
 
     </div>
-
-    <div class="flex justify-end p-6 space-x-2">
-      <%= link_to "Redirect", redirect_to_original_url(@link.slug), class: "rounded-lg py-3 px-5 bg-blue-600 text-white font-medium" %>
-      <%= link_to "Edit", edit_link_path(@link), class: "rounded-lg py-3 px-5 bg-gray-100 text-gray-800 font-medium" %>
-      <%= button_to "Destroy", link_path(@link), method: :delete, class: "rounded-lg py-3 px-5 bg-red-700 text-gray-800 font-medium", id: "destroy-link" %>
-      <%= link_to "Accesses by Day", daily_accesses_link_path(@link), class: "mt-4 rounded-lg py-3 px-5 bg-blue-600 text-white inline-block font-medium" %>
-      <%= link_to "Access Details", list_accesses_link_path(@link), class: "mt-4 rounded-lg py-3 px-5 bg-blue-600 text-white inline-block font-medium" %>
+    <br/>
+    <div class="flex justify-between p-6 space-x-2">
+      <%= link_to "Redirect", redirect_to_original_url(@link.slug), class: "flex-1 rounded-lg py-3 px-5 bg-blue-600 text-white font-medium mx-2" %>
+      <%= link_to "Accesses by Day", daily_accesses_link_path(@link), class: "flex-1 mt-4 rounded-lg py-3 px-5 bg-blue-600 text-white font-medium mx-2" %>
+      <%= link_to "Access Details", list_accesses_link_path(@link), class: "flex-1 mt-4 rounded-lg py-3 px-5 bg-blue-600 text-white font-medium mx-2" %>
+      <%= link_to "Edit", edit_link_path(@link), class: "flex-1 rounded-lg py-3 px-5 bg-gray-100 text-gray-800 font-medium mx-2" %>
+      <%= button_to "Destroy", link_path(@link), method: :delete, class: "flex-1 rounded-lg py-3 px-5 bg-gray-100 text-black font-medium mx-2", id: "destroy-link" %>
     </div>
 
-    <div class="flex justify-end p-6">
-      <%= link_to "Back to links", links_path, class: "rounded-lg py-3 px-5 bg-gray-100 text-gray-800 font-medium" %>
+    <div class="p-6">
+      <%= link_to "Back to links", links_path, class: "rounded-lg py-3 px-5 bg-gray-100 text-gray-800 font-medium w-full block" %>
     </div>
+
   </div>
 </div>
 
