--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,7 +18,7 @@
     <br/>
     <div class="flex justify-center">
       <%= link_to "Edit Account", edit_user_registration_path(current_user), class: "bg-blue-600 text-white py-2 px-4 rounded-md mr-4" %>
-      <%= button_to "Delete Account", registration_path(current_user), method: :delete, class: "bg-gray-100 text-black py-2 px-4 rounded-md", id: "destroy_account" %>
+      <%= button_to "Delete Account", registration_path(current_user), method: :delete, class: "bg-gray-100 text-red-500 py-2 px-4 rounded-md", id: "destroy_account" %>
     </div>
   </div>
 </div>
